This Commit was made to change the port from static to dynamic, check if the parameters passed contains empty data, then validates it and retrieves that data, as well as adding the access to the port when requesting the API. Finally the URL library was added.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "start":"node app.js",
       "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "",
+    "author": "Ruba Aburub",
     "license": "ISC",
     "dependencies": {
       "axios": "^0.18.0",
